# a_share_data

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: settings.yaml  watchlist.txt
scripts/: backfill_volamount.py  chain_volamount_after_daily.sh  clean_data.py  fast_merge_volamount.py  hydrate_from_release.sh  initial_build.py  pack_data_release.py  rebuild_from_baostock.py  register_daily_cron.sh  register_daily_task.ps1  release_after_build.sh  run_daily_sync.ps1  run_initial_build.ps1  sync_all.py  update_daily.py  update_meta.py  update_volamount.py
src/a_share/: __init__.py  __main__.py  cli.py  config.py  dataset.py  fetchers.py  maintenance.py  pipeline.py  storage.py  wencai.py
