[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-data"
version = "0.1.0"
description = "A股个股数据日常维护框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.14.0",
  "numpy>=1.26,<2.3",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "PyYAML>=6.0",
  "click>=8.1.0",
  "tqdm>=4.66.0",
  "requests>=2.31.0",
  "pywencai>=0.13.1",
]

[project.scripts]
a-share = "a_share.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
